--- a/README.qmd
+++ b/README.qmd
@@ -7,4 +7,11 @@ format:
     html-math-method: webtex
 ---
 
-test readme
+Welcome to the source repository for the OCPE python overview course.
+
+The name of the potential sponsor won't be mentioned.
+
+Here is the web site created for this project:
+
+  <https://lowkeylabs.github.io/ocpe-python-overview/>
+
