--- a/src/about.qmd
+++ b/src/about.qmd
@@ -19,14 +19,11 @@ John Leonard is Professor of Computer Science at the Virginia Commonwealth Unive
 
 ## Education
 
-University of California, Irvine | Irvine, CA
-PhD in Engineering | 1991
+University of California, Irvine | Irvine, CA | Ph.D. in Engineering | 1991
 
-University of California, Irvine | Irvine, CA
-MS in Engineering | 1986
+University of California, Irvine | Irvine, CA | M.S. in Engineering | 1986
 
-University of California, Irvine | Irvine, CA
-BS in Engineering | 1983
+University of California, Irvine | Irvine, CA | B.S. in Engineering | 1983
 
 
 ## Experience
